# SQLDev

./: CMakeLists.txt
src/: CMakeLists.txt
src/window/: mainwindow.cpp  mainwindow.h
